inventory service done, small bugs fixed, need to fix null time problem in crew ByID(), List()
